# GA4-monitoring-dashboard

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: color.json  config.toml
dashboard/: __init__.py  auth.py  data.py  metrics.py  overview.py  settings.py  sidebar.py  theme.py  time_series.py
data/: ga4Traffic.csv
