[project]
name = "data-monitor-dashboard"
version = "0.1.0"
description = "Streamlit dashboard for monitoring GA4 traffic data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.24",
    "streamlit>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]
